test_regress/t/t_property_pexpr_unsup.out
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:23:11: Unsupported: strong (in property expression)
   23 |     strong(a);
      |           ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:27:9: Unsupported: weak (in property expression)
   27 |     weak(a);
      |         ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:43:7: Unsupported: #-# (in property expression)
   43 |     a #-# b;
      |       ^~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:47:7: Unsupported: #=# (in property expression)
   47 |     a #=# b;
      |       ^~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:51:5: Unsupported: nexttime (in property expression)
   51 |     nexttime a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:55:5: Unsupported: nexttime[] (in property expression)
   55 |     nexttime [2] a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:59:5: Unsupported: s_nexttime (in property expression)
   59 |     s_nexttime a;
      |     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:63:5: Unsupported: s_nexttime[] (in property expression)
   63 |     s_nexttime [2] a;
      |     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:67:14: Unsupported: always (in property expression)
   67 |     nexttime always a;
      |              ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:67:5: Unsupported: nexttime (in property expression)
   67 |     nexttime always a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:71:18: Unsupported: always (in property expression)
   71 |     nexttime [2] always a;
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:71:5: Unsupported: nexttime[] (in property expression)
   71 |     nexttime [2] always a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:75:18: Unsupported: always (in property expression)
   75 |     nexttime [2] always a;
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:75:5: Unsupported: nexttime[] (in property expression)
   75 |     nexttime [2] always a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:79:14: Unsupported: s_eventually (in property expression)
   79 |     nexttime s_eventually a;
      |              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:79:5: Unsupported: nexttime (in property expression)
   79 |     nexttime s_eventually a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:83:33: Unsupported: always (in property expression)
   83 |     nexttime s_eventually [2:$] always a;
      |                                 ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:83:14: Unsupported: s_eventually[] (in property expression)
   83 |     nexttime s_eventually [2:$] always a;
      |              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:83:5: Unsupported: nexttime (in property expression)
   83 |     nexttime s_eventually [2:$] always a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:86:26: Unsupported: property argument data type
   86 |   property p_arg_propery(property inprop);
      |                          ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:89:26: Unsupported: sequence argument data type
   89 |   property p_arg_seqence(sequence inseq);
      |                          ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:94:5: Unsupported: property case expression
   94 |     case (a) endcase
      |     ^~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:97:5: Unsupported: property case expression
   97 |     case (a) default: b; endcase
      |     ^~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:100:5: Unsupported: property case expression
  100 |     if (a) b
      |     ^~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:103:5: Unsupported: property case expression
  103 |     if (a) b else c
      |     ^~
%Error: Exiting due to
